C++/.metadata/.plugins/org.eclipse.cdt.ui/namespaces.build.log
18:32:07 **** Incremental Build of configuration Debug for project namespaces ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\namespaces.o" "..\\src\\namespaces.cpp" 
..\src\namespaces.cpp: In function 'int main()':
..\src\namespaces.cpp:18:8: error: expected nested-name-specifier before 'madhava'
  using madhava;
        ^~~~~~~
..\src\namespaces.cpp:19:8: error: 'sahu' has not been declared
  cout<<sahu::c<<endl;
        ^~~~

18:32:08 Build Failed. 2 errors, 0 warnings. (took 784ms)

